test deploy automatic when push in master