@@ -23,6 +23,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
+import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
@@ -135,7 +136,7 @@ class FlowCashTest {
         Category categoryMock = new Category("category 1", userMock);
         Release releaseMock = new Release(100d, "test", Status.PENDING, Type.EXPENSE, new Date(), categoryMock, userMock);
 
-        when(query.getReleases(userId, specificationMock, pageMock)).thenReturn(new PageImpl<Release>(List.of(releaseMock)));
+        when(query.getReleases(userId, specificationMock, pageMock)).thenReturn(new PageImpl<Release>(Arrays.asList(releaseMock)));
 
         Page<Release> result = flowCashProtocol.listReleases(userId, specificationMock, pageMock);
 
